--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,8 @@
 @import "base/variables";
 @import "base/reset";
+@import "base/extend";
 @import "base/common";
 
-@import "components/header";
+@import "components/navbar";
 
 @import "pages/home";
