--- a/src/sass/base/variables.scss
+++ b/src/sass/base/variables.scss
@@ -22,3 +22,8 @@ $screen-md-max: 991px;
 $screen-lg: 992px;
 $screen-lg-max: 1199px;
 $screen-xl: 1200px;
+
+// widths & heights
+$container-max-width: 1100px;
+$header-mobile-height: 90px;
+$header-desktop-height: 68px;
