--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,9 +53,10 @@ table {
   box-sizing: border-box;
 }
 
-.navbar__container {
-  max-width: 1100px;
+.navbar__container, .container {
+  max-width: 1140px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 * {
@@ -72,7 +73,7 @@ body {
   color: #6B708D;
   margin-top: 90px;
 }
-@media (min-width: 575px) {
+@media (min-width: 576px) {
   body {
     height: 68px;
   }
@@ -81,18 +82,40 @@ body {
 h1, h2, h3, h4 {
   color: #292E47;
   font-weight: bold;
+  margin: 20px 0;
+  line-height: 5rem;
+}
+@media (min-width: 576px) {
+  h1, h2, h3, h4 {
+    line-height: 7rem;
+  }
 }
 
 h1 {
-  font-size: 6rem;
+  font-size: 4rem;
+}
+@media (min-width: 576px) {
+  h1 {
+    font-size: 6rem;
+  }
 }
 
 h2 {
-  font-size: 5rem;
+  font-size: 3rem;
+}
+@media (min-width: 576px) {
+  h2 {
+    font-size: 5rem;
+  }
 }
 
 h3 {
-  font-size: 4rem;
+  font-size: 2.6rem;
+}
+@media (min-width: 768px) {
+  h3 {
+    font-size: 4rem;
+  }
 }
 
 h4 {
@@ -101,6 +124,8 @@ h4 {
 
 p {
   font-size: 1.6rem;
+  margin: 5px 0;
+  line-height: 2.5rem;
 }
 
 a {
@@ -136,6 +161,7 @@ img {
   top: 0;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 .navbar__container {
   height: 90px;
@@ -145,7 +171,7 @@ img {
   align-items: center;
   flex-wrap: wrap;
 }
-@media (min-width: 575px) {
+@media (min-width: 576px) {
   .navbar__container {
     height: 68px;
   }
@@ -162,7 +188,7 @@ img {
   width: 100%;
   margin-top: 10px;
 }
-@media (min-width: 575px) {
+@media (min-width: 576px) {
   .navbar__menu {
     order: 2;
     max-width: 300px;
@@ -186,7 +212,7 @@ img {
 .navbar__contact {
   order: 2;
 }
-@media (min-width: 575px) {
+@media (min-width: 576px) {
   .navbar__contact {
     order: 3;
     max-width: 300px;
@@ -195,10 +221,52 @@ img {
 .navbar__contact a {
   padding: 10px;
 }
-@media (min-width: 575px) {
+@media (min-width: 576px) {
   .navbar__contact a {
     padding: 15px 37px;
   }
+}
+.navbar a:hover {
+  opacity: 0.6;
+}
+
+.header-home {
+  padding: 40px 0;
+  text-align: center;
+}
+@media (min-width: 767px) {
+  .header-home {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+}
+.header-home__hero-section {
+  position: relative;
+  margin-bottom: 50px;
+}
+@media (min-width: 767px) {
+  .header-home__text-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+.hero-section__card {
+  position: absolute;
+  max-width: 190px;
+}
+.hero-section__card1 {
+  top: 10px;
+  left: -30px;
+}
+.hero-section__card2 {
+  bottom: -70px;
+  right: -20px;
+}
+
+.text-section__btns {
+  margin: 20px 0;
 }
 
 /*# sourceMappingURL=style.css.map */
