--- a/src/css/style.css
+++ b/src/css/style.css
@@ -269,4 +269,19 @@ img {
   margin: 20px 0;
 }
 
+.logos {
+  display: none;
+}
+@media (min-width: 768px) {
+  .logos {
+    display: flex;
+    justify-content: space-between;
+    margin: 70px 0 100px;
+  }
+}
+.logos img {
+  filter: grayscale(100%);
+  max-width: 120px;
+}
+
 /*# sourceMappingURL=style.css.map */
