--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -45,3 +45,18 @@
         margin: 20px 0;
     }
 }
+
+.logos {
+    display: none;
+
+    @media (min-width: $screen-md) {
+        display: flex;
+        justify-content: space-between;
+        margin: 70px 0 100px;
+    }
+
+    img {
+        filter: grayscale(100%);
+        max-width: 120px;
+    }
+}
