--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,10 +59,6 @@ table {
   padding: 0 20px;
 }
 
-* {
-  transition: all 0.3s ease-out;
-}
-
 html {
   font-size: 10px;
 }
@@ -75,7 +71,7 @@ body {
 }
 @media (min-width: 576px) {
   body {
-    height: 68px;
+    margin-top: 68px;
   }
 }
 
@@ -131,9 +127,11 @@ p {
 a {
   color: #072AC8;
   text-decoration: none;
+  transition: all 0.3s ease-out;
 }
 a:hover {
   color: #A2D6F9;
+  transition: all 0.3s ease-out;
 }
 
 img {
@@ -147,14 +145,23 @@ img {
   color: #6B708D;
   display: inline-block;
   text-align: center;
+  transition: all 0.3s ease-out;
 }
 .btn--primary {
   background-color: #072AC8;
   color: white;
+  transition: all 0.3s ease-out;
 }
 .btn--primary:hover {
   background-color: #A2D6F9;
   color: white;
+  transition: all 0.3s ease-out;
+}
+
+@media (min-width: 768px) {
+  .br-text {
+    display: block;
+  }
 }
 
 .navbar {
@@ -162,6 +169,7 @@ img {
   position: fixed;
   width: 100%;
   z-index: 1;
+  transition: all 0.3s ease-out;
 }
 .navbar__container {
   height: 90px;
@@ -179,6 +187,7 @@ img {
 .navbar.active {
   background: #f2f4fc;
   box-shadow: 0 0 7px -3px black;
+  transition: all 0.3s ease-out;
 }
 .navbar__logo {
   order: 1;
@@ -205,9 +214,11 @@ img {
 .navbar__menu a {
   font-size: 1.7rem;
   color: #6B708D;
+  transition: all 0.3s ease-out;
 }
 .navbar__menu a.active {
   color: #072AC8;
+  transition: all 0.3s ease-out;
 }
 .navbar__contact {
   order: 2;
@@ -226,8 +237,55 @@ img {
     padding: 15px 37px;
   }
 }
+.navbar a {
+  transition: all 0.3s ease-out;
+}
 .navbar a:hover {
   opacity: 0.6;
+  transition: all 0.3s ease-out;
+}
+
+@media (min-width: 768px) {
+  .projects__container {
+    display: flex;
+    align-items: stretch;
+  }
+}
+
+.project-card {
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto 30px;
+  background: white;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+@media (min-width: 768px) {
+  .project-card:nth-child(2) {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+}
+.project-card__container {
+  padding: 0px 25px 30px;
+}
+.project-card__img {
+  height: 240px;
+  object-fit: cover;
+}
+.project-card__title {
+  margin-bottom: 0;
+  line-height: 4rem;
+}
+@media (min-width: 768px) {
+  .project-card__title {
+    line-height: 6rem;
+  }
+}
+.project-card__text {
+  margin-bottom: 70px;
+}
+.project-card__link {
+  font-size: 1.7rem;
 }
 
 .header-home {
