--- a/src/sass/components/navbar.scss
+++ b/src/sass/components/navbar.scss
@@ -19,7 +19,7 @@
         }
     }
 
-    &.active {
+    &.scrolled {
         background: #f2f4fc;
         box-shadow: 0 0 7px -3px black;
         transition: all .3s ease-out;
