--- a/src/sass/components/navbar.scss
+++ b/src/sass/components/navbar.scss
@@ -8,7 +8,7 @@
     &__container {
         @extend %container;
         height: $header-mobile-height;
-        padding: 10px;
+        padding: 10px 20px;
         display: flex;
         justify-content: space-between;
         align-items: center;
