--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -70,3 +70,123 @@
         max-width: 120px;
     }
 }
+
+.testimonial {
+    background: $n-dark url('/src/assets/testimonial-section/orbit.png') no-repeat center;
+    background-size: cover;
+    margin: 100px 0;
+    padding: 30px 40px;
+    text-align: center;
+    
+    @media (min-width: $screen-md) {
+        padding: 90px 40px;
+    }
+
+    &__container {
+        @extend %container;
+
+        @media (min-width: $screen-md) {
+            position: relative;
+            padding: 50px 150px;
+        }
+
+        &:after {
+            display: block;
+            content: '';
+            clear: both;
+        }
+    }
+    
+    &__memoji {
+        max-width: 150px;
+        margin: 30px 0;
+
+        @media (min-width: $screen-md) {
+            margin: 0;
+            position: absolute;
+        }
+        
+    }
+    
+    .memoji {
+        &__left {
+            float: left;
+            margin-left: -30px;
+
+            @media (min-width: $screen-md) {
+                left: 0;
+            }
+        }
+        
+        &__right {
+            float: right;
+            margin-right: -30px;
+            
+            @media (min-width: $screen-md) {
+                right: 0;
+            }
+        }
+
+        &__top {
+
+            @media (min-width: $screen-md) {
+                top: 0;
+            }
+        }
+        
+        &__bottom {
+
+            @media (min-width: $screen-md) {
+                bottom: 0;
+            }
+        }
+    }
+
+    &__title {
+        color: $n-light;
+        clear: both;
+    }
+
+    &__text {
+        color: $secondary;
+        max-width: 600px;
+        font-size: 2.4rem;
+        line-height: 3rem;
+        margin: 80px auto;
+    }
+
+    &__client-block {
+        display: grid;
+        grid-template-areas: 'img .' 'img .';
+        max-width: 400px;
+        margin: 0 auto 30px;
+        text-align: left;
+        
+        p {
+            margin: 0;
+        }
+    }
+}
+
+.client-block {
+    &__img {
+        grid-area: img;
+        border-radius: 50%;
+        height: 80px;
+        width: 80px;
+        margin-right: 10px;
+        object-fit: cover;
+        justify-self: end;
+    }
+    
+    &__name {
+        align-self: end;
+        color: $p-hover;
+    }
+    
+    &__company {
+        align-self: start;
+        color: $n-light;
+        font-size: 1.3rem;
+    }
+}
