--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -75,7 +75,7 @@
     background: $n-dark url('/src/assets/testimonial-section/orbit.png') no-repeat center;
     background-size: cover;
     margin: 100px 0;
-    padding: 30px 40px;
+    padding: 30px 20px;
     text-align: center;
     
     @media (min-width: $screen-md) {
@@ -87,7 +87,7 @@
 
         @media (min-width: $screen-md) {
             position: relative;
-            padding: 50px 150px;
+            padding: 50px 180px;
         }
 
         &:after {
@@ -98,48 +98,15 @@
     }
     
     &__memoji {
-        max-width: 150px;
+        max-width: 130px;
         margin: 30px 0;
-
+        
         @media (min-width: $screen-md) {
-            margin: 0;
+            max-width: 150px;
+            margin: 0 !important;
             position: absolute;
         }
         
-    }
-    
-    .memoji {
-        &__left {
-            float: left;
-            margin-left: -30px;
-
-            @media (min-width: $screen-md) {
-                left: 0;
-            }
-        }
-        
-        &__right {
-            float: right;
-            margin-right: -30px;
-            
-            @media (min-width: $screen-md) {
-                right: 0;
-            }
-        }
-
-        &__top {
-
-            @media (min-width: $screen-md) {
-                top: 0;
-            }
-        }
-        
-        &__bottom {
-
-            @media (min-width: $screen-md) {
-                bottom: 0;
-            }
-        }
     }
 
     &__title {
@@ -168,6 +135,40 @@
     }
 }
 
+.memoji {
+    &__left {
+        float: left;
+        margin-left: -40px;
+
+        @media (min-width: $screen-md) {
+            left: 0;
+        }
+    }
+    
+    &__right {
+        float: right;
+        margin-right: -40px;
+        
+        @media (min-width: $screen-md) {
+            right: 0;
+        }
+    }
+
+    &__top {
+
+        @media (min-width: $screen-md) {
+            top: 0;
+        }
+    }
+    
+    &__bottom {
+
+        @media (min-width: $screen-md) {
+            bottom: 0;
+        }
+    }
+}
+
 .client-block {
     &__img {
         grid-area: img;
@@ -188,5 +189,53 @@
         align-self: start;
         color: $n-light;
         font-size: 1.3rem;
+    }
+}
+
+.services {
+    &__container {
+        @media (min-width: $screen-md) {
+            display: flex;
+            align-items: stretch;
+        }
+    }
+}
+
+.service-card {
+    max-width: 400px;
+    width: 100%;
+    margin: 0 auto 30px;
+    background: white;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    padding: 30px 25px;
+
+    &:nth-child(2) {
+        @media (min-width: $screen-md) {
+            margin-left: 30px;
+            margin-right: 30px;
+        }
+    }
+
+    &__icon-block {
+        width: 80px;
+        height: 80px;
+        background-color: $n-light;
+        border-radius: 50%;
+        padding: 20px;
+        margin-bottom: 30px;
+    }
+    
+    &__title {
+        margin-bottom: 0;
+        font-size: 2.2rem;
+        line-height: 3rem;
+    }
+
+    &__text {
+        margin-bottom: 40px;
+    }
+
+    &__link {
+        font-size: 1.7rem;
     }
 }
