--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,7 +53,7 @@ table {
   box-sizing: border-box;
 }
 
-.testimonial__container, .navbar__container, .container {
+.testimonial__container, .footer, .navbar__container, .container {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 20px;
@@ -66,12 +66,22 @@ html {
 body {
   background: #F2F4FC;
   font-family: "Roboto";
+  font-size: 1.7rem;
   color: #6B708D;
   margin-top: 90px;
 }
 @media (min-width: 576px) {
   body {
     margin-top: 68px;
+  }
+}
+
+section {
+  margin: 50px 0;
+}
+@media (min-width: 769px) {
+  section {
+    margin: 100px 0;
   }
 }
 
@@ -85,7 +95,7 @@ h1 {
   font-size: 4rem;
   line-height: 5rem;
 }
-@media (min-width: 576px) {
+@media (min-width: 769px) {
   h1 {
     font-size: 6rem;
     line-height: 7rem;
@@ -96,7 +106,7 @@ h2 {
   font-size: 3rem;
   line-height: 4rem;
 }
-@media (min-width: 576px) {
+@media (min-width: 769px) {
   h2 {
     font-size: 5rem;
     line-height: 6rem;
@@ -104,10 +114,10 @@ h2 {
 }
 
 h3 {
-  font-size: 2.6rem;
+  font-size: 2.5rem;
   line-height: 3rem;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   h3 {
     font-size: 4rem;
     line-height: 5rem;
@@ -115,7 +125,7 @@ h3 {
 }
 
 h4 {
-  font-size: 2.4rem;
+  font-size: 2.2rem;
   line-height: 3rem;
 }
 
@@ -163,7 +173,7 @@ img {
   transition: all 0.3s ease-out;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .br-text {
     display: block;
   }
@@ -189,6 +199,11 @@ img {
     height: 68px;
   }
 }
+@media (min-width: 576px) {
+  .navbar__container > * {
+    width: 31%;
+  }
+}
 .navbar.scrolled {
   background: #f2f4fc;
   box-shadow: 0 0 7px -3px black;
@@ -196,6 +211,9 @@ img {
 }
 .navbar__logo {
   order: 1;
+}
+.navbar__logo img {
+  max-width: 62px;
 }
 .navbar__menu {
   order: 3;
@@ -205,6 +223,7 @@ img {
 @media (min-width: 576px) {
   .navbar__menu {
     order: 2;
+    width: 31%;
     max-width: 300px;
     margin-top: 0;
   }
@@ -217,7 +236,6 @@ img {
   padding: 0 10px;
 }
 .navbar__menu a {
-  font-size: 1.7rem;
   color: #6B708D;
   transition: all 0.3s ease-out;
 }
@@ -230,6 +248,7 @@ img {
 }
 @media (min-width: 576px) {
   .navbar__contact {
+    text-align: right;
     order: 3;
     max-width: 300px;
   }
@@ -250,7 +269,7 @@ img {
   transition: all 0.3s ease-out;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .projects__container {
     display: flex;
     align-items: stretch;
@@ -264,7 +283,7 @@ img {
   background: white;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .project-card:nth-child(2) {
     margin-left: 30px;
     margin-right: 30px;
@@ -281,16 +300,13 @@ img {
   margin-bottom: 0;
   line-height: 4rem;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .project-card__title {
     line-height: 6rem;
   }
 }
 .project-card__text {
   margin-bottom: 70px;
-}
-.project-card__link {
-  font-size: 1.7rem;
 }
 
 .newsletter {
@@ -299,7 +315,7 @@ img {
   background-color: #FFC600;
   text-align: center;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .newsletter {
     padding: 100px 0;
   }
@@ -350,11 +366,57 @@ img {
   }
 }
 
+.footer {
+  margin-top: 100px;
+  margin-bottom: 70px;
+}
+@media (min-width: 769px) {
+  .footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 769px) {
+  .footer > div {
+    align-self: center;
+  }
+}
+.footer__info > * {
+  margin-bottom: 30px;
+}
+@media (min-width: 769px) {
+  .footer__info > *:last-child {
+    margin-bottom: 0;
+  }
+}
+.footer__logo {
+  max-width: 100px;
+  display: block;
+}
+.footer__links {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 50px;
+  column-gap: 10px;
+}
+@media (min-width: 769px) {
+  .footer__links {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+.footer__links a {
+  color: #6B708D;
+  display: block;
+}
+.footer__links a:hover {
+  color: #A2D6F9;
+}
+
 .header-home {
   padding: 40px 0;
   text-align: center;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .header-home {
     display: flex;
     flex-direction: row-reverse;
@@ -366,13 +428,13 @@ img {
   max-width: 400px;
   margin: 0 auto 50px;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .header-home__hero-section {
     max-width: 100%;
     margin-top: 50px;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .header-home__text-section {
     display: flex;
     flex-direction: column;
@@ -405,7 +467,7 @@ img {
 .logos {
   display: none;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .logos {
     display: flex;
     justify-content: space-between;
@@ -424,12 +486,12 @@ img {
   padding: 30px 20px;
   text-align: center;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .testimonial {
     padding: 90px 40px;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .testimonial__container {
     position: relative;
     padding: 50px 180px;
@@ -444,7 +506,7 @@ img {
   max-width: 130px;
   margin: 30px 0;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .testimonial__memoji {
     max-width: 150px;
     margin: 0 !important;
@@ -477,7 +539,7 @@ img {
   float: left;
   margin-left: -40px;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .memoji__left {
     left: 0;
   }
@@ -486,17 +548,17 @@ img {
   float: right;
   margin-right: -40px;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .memoji__right {
     right: 0;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .memoji__top {
     top: 0;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .memoji__bottom {
     bottom: 0;
   }
@@ -521,7 +583,7 @@ img {
   font-size: 1.3rem;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .services__container {
     display: flex;
     align-items: stretch;
@@ -536,7 +598,7 @@ img {
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   padding: 30px 25px;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .service-card:nth-child(2) {
     margin-left: 30px;
     margin-right: 30px;
@@ -557,9 +619,6 @@ img {
 }
 .service-card__text {
   margin-bottom: 40px;
-}
-.service-card__link {
-  font-size: 1.7rem;
 }
 
 /*# sourceMappingURL=style.css.map */
