--- a/src/sass/base/common.scss
+++ b/src/sass/base/common.scss
@@ -8,11 +8,20 @@ html {
 body {
     background: $n-light;
     font-family: "Roboto";
+    font-size: 1.7rem;
     color: $n-medium;
     margin-top: 90px;
     
     @media (min-width: $screen-sm) {
         margin-top: 68px;
+    }
+}
+
+section {
+    margin: 50px 0;
+    
+    @media (min-width: $screen-md) {
+        margin: 100px 0;
     }
 }
 
@@ -26,7 +35,7 @@ h1 {
     font-size: 4rem;
     line-height: 5rem;
     
-    @media (min-width: $screen-sm) {
+    @media (min-width: $screen-md) {
         font-size: 6rem;
         line-height: 7rem;
     }
@@ -36,14 +45,14 @@ h2 {
     font-size: 3rem;
     line-height: 4rem;
     
-    @media (min-width: $screen-sm) {
+    @media (min-width: $screen-md) {
         font-size: 5rem;
         line-height: 6rem;
     }
 }
 
 h3 {
-    font-size: 2.6rem;
+    font-size: 2.5rem;
     line-height: 3rem;
     
     @media (min-width: $screen-md) {
@@ -53,7 +62,7 @@ h3 {
 }
 
 h4 {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     line-height: 3rem;
 }
 
