--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,5 +6,6 @@
 @import "components/navbar";
 @import "components/projects";
 @import "components/newsletter";
+@import "components/footer";
 
 @import "pages/home";
