--- a/src/sass/base/common.scss
+++ b/src/sass/base/common.scss
@@ -97,6 +97,7 @@ button {
 
 input,
 textarea {
+    font-family: "Roboto";
     font-size: 1.7rem;
     width: 100%;
     border: none;
@@ -142,4 +143,35 @@ textarea {
     @media (min-width: $screen-md) {
         display: block;
     }
+}
+
+.hide {
+    display: none;
+}
+
+.appear {
+	animation: appear-element 2s;
+}
+
+
+// alerts
+
+.alert {
+    position: relative;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+}
+
+.alert-success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
 }
