--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 @import "base/variables";
 @import "base/reset";
 @import "base/extend";
+@import "base/animations";
 @import "base/common";
 
 @import "components/navbar";
