--- a/src/sass/pages/contact.scss
+++ b/src/sass/pages/contact.scss
@@ -10,10 +10,10 @@
     }
 
     &__block {
-        margin: 15px 0;
+        margin: 20px 0;
 
         @media (min-width: $screen-sm) {
-            margin: 30px 0;
+            margin: 40px 0;
         }
     }
 
@@ -38,7 +38,7 @@
     input,
     textarea {
         background-color: rgba(107, 112, 141, 0.1);
-        margin: 15px 0;
+        margin-top: 15px;
         padding: 20px;
     }
     
