--- a/src/css/style.css
+++ b/src/css/style.css
@@ -688,7 +688,9 @@ textarea {
 }
 @media (min-width: 576px) {
   .contact__block--2cols {
-    columns: 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
   }
 }
 @media (min-width: 576px) {
@@ -715,6 +717,9 @@ textarea {
 .contact button {
   width: 100%;
   height: 80px;
+}
+.contact__info {
+  margin-top: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
