--- a/src/sass/pages/contact.scss
+++ b/src/sass/pages/contact.scss
@@ -20,7 +20,9 @@
     &__block--2cols {
         
         @media (min-width: $screen-sm) {
-            columns: 2;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-gap: 20px;
         }
         
         .contact__block {
@@ -54,5 +56,9 @@
     button {
         width: 100%;
         height: 80px;
+    }
+
+    &__info {
+        margin-top: 30px;
     }
 }
