--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -2,8 +2,9 @@
     @extend %container;
     margin-top: 100px;
     margin-bottom: 70px;
-
+    
     @media (min-width: $screen-md) {
+        margin-top: 200px;
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
