--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,12 +59,40 @@ table {
   padding: 0 20px;
 }
 
+.appear {
+  animation: appear-element 2s;
+}
+
 @keyframes appear-element {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+.turn-right {
+  animation: turn-right 1s;
+}
+
+@keyframes turn-right {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.turn-left {
+  animation: turn-left 1s;
+}
+
+@keyframes turn-left {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
   }
 }
 html {
@@ -200,10 +228,6 @@ textarea {
 
 .hide {
   display: none;
-}
-
-.appear {
-  animation: appear-element 2s;
 }
 
 .alert {
