--- a/src/css/style.css
+++ b/src/css/style.css
@@ -360,12 +360,18 @@ textarea {
   margin: 0 auto 30px;
   background: white;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  transition: all 0.3s ease-out;
 }
 @media (min-width: 769px) {
   .project-card:nth-child(2) {
     margin-left: 30px;
     margin-right: 30px;
   }
+}
+.project-card:hover {
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 9.95px 10.6px;
+  transform: translateY(-6px);
+  transition: all 0.3s ease-out;
 }
 .project-card__container {
   padding: 0px 25px 30px;
@@ -553,6 +559,11 @@ textarea {
 .logos img {
   filter: grayscale(100%);
   max-width: 120px;
+  transition: all 0.3s ease-out;
+}
+.logos img:hover {
+  filter: grayscale(0);
+  transition: all 0.3s ease-out;
 }
 
 .testimonial {
@@ -672,12 +683,18 @@ textarea {
   background: white;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   padding: 30px 25px;
+  transition: all 0.3s ease-out;
 }
 @media (min-width: 769px) {
   .service-card:nth-child(2) {
     margin-left: 30px;
     margin-right: 30px;
   }
+}
+.service-card:hover {
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 9.95px 10.6px;
+  transform: translateY(-6px);
+  transition: all 0.3s ease-out;
 }
 .service-card__icon-block {
   width: 80px;
