--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -66,6 +66,12 @@
     img {
         filter: grayscale(100%);
         max-width: 120px;
+        transition: all .3s ease-out;
+        
+        &:hover {
+            filter: grayscale(0);
+            transition: all .3s ease-out;
+        }
     }
 }
 
@@ -205,12 +211,19 @@
     background: white;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     padding: 30px 25px;
+    transition: all .3s ease-out;
 
     &:nth-child(2) {
         @media (min-width: $screen-md) {
             margin-left: 30px;
             margin-right: 30px;
         }
+    }
+
+    &:hover {
+        box-shadow: rgb(0 0 0 / 15%) 1.95px 9.95px 10.6px;
+        transform: translateY(-6px);
+        transition: all .3s ease-out;
     }
 
     &__icon-block {
