--- a/src/sass/base/animations.scss
+++ b/src/sass/base/animations.scss
@@ -17,10 +17,10 @@
 
 @keyframes turn-right {
 	0% {
-		transform:rotate(0deg);
+		transform: rotate(0deg);
 	}
 	100% {
-		transform:rotate(360deg);
+		transform: rotate(360deg);
 	}
 }
 
@@ -30,9 +30,27 @@
 
 @keyframes turn-left {
 	0% {
-		transform:rotate(0deg);
+		transform: rotate(0deg);
 	}
 	100% {
-		transform:rotate(-360deg);
+		transform: rotate(-360deg);
+	}
+}
+
+@keyframes move-up-down {
+	0% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: scale(1.1) translateY(-15px);
+	}
+}
+
+@keyframes move-down-up {
+	0% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: scale(1.1) translateY(15px);
 	}
 }
