--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,7 @@
 @import "components/projects";
 @import "components/newsletter";
 @import "components/footer";
+@import "components/loader";
 
 @import "pages/home";
 @import "pages/contact";
