--- a/src/sass/components/projects.scss
+++ b/src/sass/components/projects.scss
@@ -30,6 +30,21 @@
 
     &__container {
         padding: 0px 25px 30px;
+        
+        @media (min-width: $screen-md) {
+            height: 260px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        &-top {
+            margin-bottom: 70px;
+            
+            @media (min-width: $screen-md) {
+                margin-bottom: 0;
+            }
+        }
     }
 
     &__img {
@@ -44,9 +59,5 @@
         @media (min-width: $screen-md) {
             line-height: 4.5rem;
         }
-    }
-
-    &__text {
-        margin-bottom: 70px;
     }
 }
