--- a/src/css/style.css
+++ b/src/css/style.css
@@ -367,6 +367,7 @@ textarea {
   .projects__container {
     display: flex;
     align-items: stretch;
+    justify-content: space-evenly;
   }
 }
 
@@ -379,9 +380,18 @@ textarea {
   transition: all 0.3s ease-out;
 }
 @media (min-width: 769px) {
-  .project-card:nth-child(2) {
-    margin-left: 30px;
-    margin-right: 30px;
+  .project-card {
+    margin: 0 15px 30px;
+  }
+}
+@media (min-width: 769px) {
+  .project-card:first-child {
+    margin-left: 0;
+  }
+}
+@media (min-width: 769px) {
+  .project-card:last-child {
+    margin-right: 0;
   }
 }
 .project-card:hover {
