--- a/src/sass/components/projects.scss
+++ b/src/sass/components/projects.scss
@@ -3,6 +3,7 @@
         @media (min-width: $screen-md) {
             display: flex;
             align-items: stretch;
+            justify-content: space-evenly;
         }
     }
 }
@@ -14,11 +15,20 @@
     background: white;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     transition: all .3s ease-out;
+    
+    @media (min-width: $screen-md) {
+        margin: 0 15px 30px;
+    }
 
-    &:nth-child(2) {
+    &:first-child {
         @media (min-width: $screen-md) {
-            margin-left: 30px;
-            margin-right: 30px;
+            margin-left: 0;
+        }
+    }
+    
+    &:last-child {
+        @media (min-width: $screen-md) {
+            margin-right: 0;
         }
     }
 
