--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -14,7 +14,7 @@
         
         @media (min-width: $screen-md) {
             max-width: 100%;
-            margin-bottom: 0;
+            margin: auto;
         }
 
         &.hero-animation {
